--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center_horizontal"
-    tools:context="com.sdsmdg.skipthequeue.MainActivity">
+    tools:context="com.sdsmdg.skipthequeue.SignupActivity">
 
     <EditText
         android:id="@+id/mobile_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Mobile no."
-        android:inputType="number"/>
+        android:hint="Mobile No."
+        android:gravity="center" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:onClick="signinClicked"
-        android:text="SIGN IN"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:text="SIGN UP"
         android:onClick="signupClicked"
-        android:text="SIGN UP"/>
+        android:layout_gravity="bottom"/>
 
-</LinearLayout>
+</FrameLayout>
