--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,23 @@
     tools:context="com.sdsmdg.skipthequeue.MainActivity">
 
     <TextView
+        android:text="Beacon Scanner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_above="@+id/listView"
+        android:layout_marginBottom="28dp"
+        android:id="@+id/textView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textColor="?android:attr/textColorPrimary" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_marginTop="43dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_height="400dp"
+        android:id="@+id/beacons_list_view" />
 </RelativeLayout>
