--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -14,7 +14,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Mobile No."
+        android:inputType="number"
         android:gravity="center" />
+
+    <TextView
+        android:id="@+id/infoTextView"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textSize="24sp"
+        android:text="You'll now receive a one time client id via message, use that to sign in when you come back"/>
 
     <Button
         android:layout_width="match_parent"
