--- a/app/src/main/res/layout/activity_show_queue_no.xml
+++ b/app/src/main/res/layout/activity_show_queue_no.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,31 +7,48 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.sdsmdg.skipthequeue.ShowQueueNoActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your token no. is"
+        android:text="Your Token Number is :"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:textSize="25sp"/>
+        android:textSize="25sp"
+        android:textAlignment="center" />
+
     <TextView
         android:id="@+id/token_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="52"
-        android:layout_centerInParent="true"
-        android:textSize="100sp"/>
+        android:textSize="100sp"
+        android:layout_marginTop="43dp"
+        android:layout_below="@+id/textView3"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Expected time till your chance : 45 min"
         android:textSize="22sp"
         android:id="@+id/user_time"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/token_text_view" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Delete Token"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/delete_token"
+        android:layout_above="@+id/user_time"
+        android:layout_alignStart="@+id/token_text_view"
+        android:layout_gravity = "center_horizontal"
+        android:layout_marginBottom="46dp"
+        android:onClick="delete_click" />
 
 
-
-</RelativeLayout>
+</LinearLayout>
