--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         android:paddingBottom="10dp"
         android:paddingRight="30dp"
         android:onClick="signinClicked"
-        fancy:fb_text="Sign in"
+        fancy:fb_text="Use Token"
         fancy:fb_radius="30dp"/>
 
     <com.victor.loading.rotate.RotateLoading
@@ -67,6 +67,6 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:textColor="#00bfff"
-        android:text = "Don't have check in id? Sign up"/>
+        android:text = "Don't have check in id? Generate Token"/>
 
 </RelativeLayout>
