--- a/app/src/main/res/layout/activity_show_queue_no.xml
+++ b/app/src/main/res/layout/activity_show_queue_no.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your Token Number is :"
+        android:text="Your Queue Number is :"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:textSize="25sp"
@@ -38,6 +38,5 @@
         android:id="@+id/user_time"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
-
 
 </LinearLayout>
