--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,36 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#ffffff"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     tools:context="com.sdsmdg.skipthequeue.SignupActivity">
 
-    <EditText
-        android:id="@+id/mobile_editText"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/queue_image_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Mobile No."
-        android:inputType="number"
-        android:gravity="center" />
+        android:layout_alignParentTop="true"
+        android:src="@drawable/queue_1" />
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/mobile_input"
+        android:layout_width="match_parent"
+        android:layout_centerInParent="true"
+        android:theme="@style/TextLabel"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/mobile_editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Mobile No."
+            android:layout_margin="20dp"
+            android:inputType="number" />
+
+    </android.support.design.widget.TextInputLayout>
 
     <TextView
         android:id="@+id/infoTextView"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:layout_below="@id/mobile_input"
+        android:layout_gravity="center"
+        android:text="You'll now receive a one time client id via message, use that to sign in when you come back"
         android:textSize="24sp"
-        android:text="You'll now receive a one time client id via message, use that to sign in when you come back"/>
+        android:visibility="gone" />
 
-    <Button
+    <mehdi.sakout.fancybuttons.FancyButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SIGN UP"
+        android:layout_gravity="bottom"
+        android:layout_margin="16dp"
+        android:padding="13dp"
         android:onClick="signupClicked"
-        android:layout_gravity="bottom"/>
+        android:backgroundTint="#33ddff"
+        android:layout_alignParentBottom="true"
+        android:text="SIGN UP"
+        fancy:fb_radius="30dp"/>
 
-</FrameLayout>
+</RelativeLayout>
