--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,9 +64,11 @@
         android:layout_height="wrap_content"
         android:textSize="18dp"
         android:onClick="signupClicked"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
         android:textColor="#00bfff"
-        android:text = "Don't have check in id? Sign up"/>
+        android:text = "Don't have check in id? Sign up"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="493dp"
+        android:layout_marginBottom="42dp" />
 
 </RelativeLayout>
