--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,13 +19,15 @@
     </style>
 
     <!--My custom layout-->
-    <style name="MyCustomTheme" parent="@android:style/Theme.Holo.Light">
+    <style name="MyCustomTheme" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:elevation">0dp</item>
         <item name="android:actionBarStyle">@style/MyActionBarTheme</item>
+        <item name="android:textColorPrimary">#33ddff</item>
     </style>
 
     <style name="MyActionBarTheme" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">#ffffff</item>
-        <item name="android:textColorPrimary">#33ddff</item>
     </style>
 
 </resources>
