--- a/app/src/main/res/layout/activity_starting.xml
+++ b/app/src/main/res/layout/activity_starting.xml
@@ -7,10 +7,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/white"
     tools:context="com.sdsmdg.skipthequeue.StartingActivity">
 
     <TextView
-        android:text="Beacon Scanner"
+        android:text="Searching queues nearby"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
