--- a/app/src/main/res/drawable/background_gradient.xml
+++ b/app/src/main/res/drawable/background_gradient.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape>
-            <gradient
-                android:angle="90"
-                android:startColor="#f2f2f2"
-                android:endColor="#ffffff"
-                android:type="linear" />
+        <shape android:shape="rectangle">
+            <solid android:color="@color/colorPrimaryDark" />
         </shape>
     </item>
-</selector>
+    <item android:left="5dp" android:right="5dp"  android:top="5dp" >
+        <shape android:shape="rectangle">
+            <solid android:color="#ffffff" />
+        </shape>
+    </item>
+</layer-list>
