--- a/app/src/main/res/layout/notification_layout.xml
+++ b/app/src/main/res/layout/notification_layout.xml
@@ -2,40 +2,57 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="Simulate Test Beacon "
-        android:textSize="20sp"
-        android:textColor="@color/bg_gradient_start"
-        android:fontFamily="sans-serif"
-        android:typeface="monospace"
-        android:textAlignment="center"
-        android:textStyle="normal|bold" />
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@drawable/background_gradient"
+    android:paddingBottom="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="wrap_content"
+            android:text="Simulate nearby Beacon"
+            android:textSize="20sp"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="20dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:id="@+id/textView2"/>
+
+        <ImageView
+            android:layout_weight="1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/beacon_ui"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:weightSum="2">
+
     <Button
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="14sp"
         android:id="@+id/connectBeacon"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimaryDark"
         android:text="Connect Beacon" />
 
     <Button
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="14sp"
         android:id="@+id/disconnectBeacon"
-        android:text="Disconnect Beacon" />
+        android:background="@color/white"
+        android:text="Disconnect Beacon"
+        android:textColor="@color/colorPrimaryDark"/>
     </LinearLayout>
-
 
 </LinearLayout>
