--- a/app/src/main/res/layout/activity_starting.xml
+++ b/app/src/main/res/layout/activity_starting.xml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_starting2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimaryDark"
     tools:context="com.sdsmdg.skipthequeue.StartingActivity">
 
     <TextView
-        android:text="Searching queues nearby"
+        android:text="List View of Nearby Places Here"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
+        android:id="@+id/textView5"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentStart="true"
         android:textAlignment="center"
-        android:textSize="20sp"
-        android:textColor="?android:attr/textColorPrimary" />
+        android:textSize="20sp" />
 
-    <View
-        android:id="@+id/dividing_line"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#000000"
-        android:layout_marginTop="30dp"
-        android:layout_below="@id/textView"/>
+    <TextView
+        android:text="View Present Status "
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView6"
+        android:layout_marginBottom="148dp"
+        android:onClick="presentClick"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp"
+        android:textStyle="normal|bold" />
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_below="@id/dividing_line"
+    <Button
+        android:text="Switch To Beacon Scanner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView6"
+        android:layout_marginBottom="22dp"
+        android:id="@+id/beacon_scanner_button"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="30dp"
-        android:layout_height="400dp"
-        android:id="@+id/beacons_list_view" />
+        android:onClick="beacon_scanner_button" />
 
 </RelativeLayout>
