Adds out of cash feature

--- a/app/src/main/res/layout/activity_view_status.xml
+++ b/app/src/main/res/layout/activity_view_status.xml
@@ -102,6 +102,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/out_of_cash"
+        android:onClick="reportOFC"
         android:textAlignment="center" />
 
 </LinearLayout>
