--- a/app/src/main/res/layout/activity_view_status.xml
+++ b/app/src/main/res/layout/activity_view_status.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,100 +9,106 @@
     tools:context="com.sdsmdg.skipthequeue.ViewStatusActivity">
 
     <TextView
+        android:id="@+id/delete_token_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your no. in queue"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/white"
-        android:layout_marginTop="20dp"
-        android:textSize="24sp"
-        android:textAlignment="center" />
+        android:text="I won't go, delete my token"
+        android:textSize="18sp"
+        android:textColor="@color/colorPrimary"
+        android:visibility="visible"
+        android:gravity="center_horizontal"
+        android:onClick="deleteTokenOnClick"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"/>
 
     <TextView
-        android:id="@+id/token_text_view"
+        android:id="@+id/out_of_cash"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="#52"
-        android:textColor="@color/white"
-        android:textSize="100sp"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center" />
+        android:text="Report out of cash"
+        android:textSize="18sp"
+        android:layout_above="@id/delete_token_textview"
+        android:textColor="@color/colorPrimary"
+        android:visibility="visible"
+        android:gravity="center_horizontal"/>
 
-    <TextView
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/use_token_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Expected time : 45 min"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:id="@+id/user_time"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/colorPrimary"
+        android:layout_above="@id/out_of_cash"
+        android:layout_margin="10dp"
+        android:visibility="visible"
+        android:paddingLeft="30dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="30dp"
+        fancy:fb_textColor="@color/colorPrimaryDark"
+        fancy:fb_text="Use Token"
+        fancy:fb_radius="30dp"/>
 
-    <!--Dividing line for the ticket-->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp">
-
-        <ImageView
-            android:layout_width="15dp"
-            android:layout_height="30dp"
-            android:scaleType="fitCenter"
-            android:layout_gravity="left"
-            android:src="@drawable/semi_circle_left"/>
-
-        <ImageView
-            android:layout_width="15dp"
-            android:layout_height="30dp"
-            android:scaleType="fitCenter"
-            android:layout_gravity="right"
-            android:src="@drawable/semi_circle_right"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_gravity="center"
-            android:background="@color/white" />
-
-    </FrameLayout>
-
-    <ImageView
-        android:layout_width="240dp"
-        android:layout_height="80dp"
+    <LinearLayout
+        android:id="@+id/ticket_layout"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
-        android:src="@drawable/bar_code"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ticket"
+        android:orientation="vertical"
+        android:layout_above="@id/use_token_button"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:paddingTop="40dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_gravity="center_horizontal"
+            android:text="You no. in queue is"
+            android:textColor="@color/colorPrimaryDark"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/token_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="#52"
+            android:textSize="80sp"
+            android:textColor="#000000"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Expected time : 45 min"
+            android:textSize="18sp"
+            android:textColor="#000000"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:id="@+id/user_time" />
+
+    </LinearLayout>
+
+    <!--The following thank you text will be visible when show status is clicked
+    i.e. the beacon is disconnected-->
 
     <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:textColor="@color/white"
-          android:gravity="center_horizontal"
-          android:textSize="18sp"
-          android:text="Thank you for using our service!"/>
-
-    <Button
-        android:text="Use Token"
+        android:id="@+id/thank_you_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/use_token"
-        android:onClick="useTokenOnClick" />
+        android:text="Thank you for using our service!"
+        android:gravity="center_horizontal"
+        android:textSize="18sp"
+        android:visibility="invisible"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/colorPrimary"
+        android:layout_below="@id/ticket_layout"
+        android:layout_margin="30dp"/>
 
-    <Button
-        android:text="Delete Token"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/delete_token"
-        android:onClick="deleteTokenOnClick" />
-
-    <TextView
-        android:text="Report Out of Cash"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/out_of_cash"
-        android:textAlignment="center" />
-
-</LinearLayout>
+</RelativeLayout>
