--- a/app/src/main/res/layout/activity_atm_details.xml
+++ b/app/src/main/res/layout/activity_atm_details.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sdsmdg.skipthequeue.otp.Atm_details">
+    tools:context="com.sdsmdg.skipthequeue.Atm_details">
+
     <android.support.v7.widget.RecyclerView
         android:id ="@+id/recycler_view"
         android:scrollbars="vertical"
