rfac: Makes machine object available to every class

--- a/app/src/main/res/layout/activity_view_status.xml
+++ b/app/src/main/res/layout/activity_view_status.xml
@@ -46,6 +46,7 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:paddingRight="30dp"
+        android:onClick="useTokenOnClick"
         fancy:fb_textColor="@color/colorPrimaryDark"
         fancy:fb_text="Use Token"
         fancy:fb_radius="30dp"/>
