--- a/app/src/main/res/layout/activity_starting.xml
+++ b/app/src/main/res/layout/activity_starting.xml
@@ -4,52 +4,37 @@
     android:id="@+id/activity_starting2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorPrimary"
     tools:context="com.sdsmdg.skipthequeue.StartingActivity">
 
-    <TextView
-        android:text="Nearby atms"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/view_status_frame"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView5"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:textAlignment="center"
-        android:textSize="20sp" />
-
-    <TextView
-        android:text="View Present Status "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView6"
-        android:layout_marginBottom="48dp"
-        android:onClick="presentClick"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:textSize="24sp"
-        android:textStyle="normal|bold" />
+        android:paddingBottom="30dp"
+        android:paddingTop="30dp"
+        android:layout_gravity="bottom"
+        android:background="@color/colorPrimaryDark">
 
-    <!--<Button-->
-        <!--android:text="Switch To Beacon Scanner"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_above="@+id/textView6"-->
-        <!--android:layout_marginBottom="22dp"-->
-        <!--android:id="@+id/beacon_scanner_button"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:onClick="beacon_scanner_button" />-->
+        <TextView
+            android:text="View Present Status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView6"
+            android:textColor="@color/colorPrimary"
+            android:onClick="presentClick"
+            android:textSize="24sp"
+            android:layout_gravity="center_horizontal" />
+    </FrameLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id ="@+id/recycler_view"
         android:scrollbars="vertical"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/textView5"
+        android:layout_above="@id/view_status_frame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
