--- a/app/src/main/res/layout/activity_starting.xml
+++ b/app/src/main/res/layout/activity_starting.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="com.sdsmdg.skipthequeue.StartingActivity">
+    tools:context="com.sdsmdg.skipthequeue.StartingActivity"
+    android:backgroundTint="@color/colorPrimaryDark">
 
     <FrameLayout
         android:id="@+id/view_status_frame"
@@ -16,24 +17,36 @@
         android:paddingBottom="30dp"
         android:paddingTop="30dp"
         android:layout_gravity="bottom"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/colorPrimary">
 
         <TextView
             android:text="View Present Status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView6"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryDark"
             android:onClick="presentClick"
             android:textSize="24sp"
             android:layout_gravity="center_horizontal" />
+
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/nearby_atm_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:textColor="@color/colorPrimary"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="16dp"
+        android:text="Nearby Atms"/>
 
     <android.support.v7.widget.RecyclerView
         android:id ="@+id/recycler_view"
         android:scrollbars="vertical"
         android:layout_marginTop="10dp"
         android:layout_above="@id/view_status_frame"
+        android:layout_below="@id/nearby_atm_textview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
