--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,10 +24,23 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:actionBarStyle">@style/MyActionBarTheme</item>
         <item name="android:textColorPrimary">#33ddff</item>
+        <item name="android:alertDialogTheme">@style/YourAlertDialogTheme</item>
+    </style>
+
+    <style name="MyCustomTheme.NoActionBar">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:alertDialogTheme">@style/YourAlertDialogTheme</item>
     </style>
 
     <style name="MyActionBarTheme" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="elevation">0dp</item>
+    </style>
+
+    <style name="YourAlertDialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:textColor">#333333</item>
+        <item name="android:colorAccent">@color/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">#333333</item>
     </style>
 
 </resources>
