--- a/app/src/main/res/layout/activity_starting.xml
+++ b/app/src/main/res/layout/activity_starting.xml
@@ -31,6 +31,12 @@
 
     </FrameLayout>
 
+    <com.victor.loading.rotate.RotateLoading
+        android:id="@+id/rotate_loading"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"/>
+
     <TextView
         android:id="@+id/nearby_atm_textview"
         android:layout_width="wrap_content"
