--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="bg_gradient_start">#31244e</color>
     <color name="white">#ffffff</color>
+    <color name="gray">#d3d3d3</color>
 </resources>
