--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/railway_container"
+            android:id="@+id/restaurant_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -26,17 +26,17 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/railway_icon"
+                android:id="@+id/restaurant_icon"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/train" />
+                android:src="@drawable/restaurant_icon" />
 
             <TextView
                 android:textColor="#ffffff"
-                android:id="@+id/railway_text"
+                android:id="@+id/restaurant_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Railway"
+                android:text="Restaurant"
                 android:layout_gravity="center_horizontal"/>
 
         </LinearLayout>
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_alignTop="@+id/railway_container"
+            android:layout_alignTop="@+id/restaurant_container"
             android:layout_alignStart="@+id/linearLayout3">
 
             <ImageView
@@ -96,8 +96,8 @@
             android:orientation="vertical"
             android:id="@+id/atm_container"
             android:layout_marginBottom="131dp"
-            android:layout_above="@+id/railway_container"
-            android:layout_alignStart="@+id/railway_container">
+            android:layout_above="@+id/restaurant_container"
+            android:layout_alignStart="@+id/restaurant_container">
 
             <ImageView
                 android:id="@+id/atm_icon"
