feat: Adds SkipTheQueue to movie theatres

--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -22,6 +22,7 @@
             android:orientation="vertical"
             android:layout_alignTop="@+id/atm_container"
             android:layout_alignParentEnd="true"
+            android:onClick="moviesSelected"
             android:id="@+id/linearLayout3">
 
             <ImageView
@@ -49,7 +50,8 @@
             android:id="@+id/atm_container"
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/restaurant_container"
-            android:layout_marginTop="68dp">
+            android:layout_marginTop="68dp"
+            android:onClick="atmSelected">
 
             <ImageView
                 android:id="@+id/atm_icon"
